ISPN-14158 Add --enable-preview when running on JDK 19