@@ -293,8 +293,15 @@ if [ "$PRESERVE_JAVA_OPTS" != "true" ]; then
         fi
     fi
 
-    # Enable export for LDAP (needed for JDK 17+)
-    PREPEND_JAVA_OPTS="$PREPEND_JAVA_OPTS --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"
+    JAVA_VERSION=$(java -version 2>&1 | sed -n ';s/.* version "\([^\.\-]*\).*".*/\1/p;')
+    if [ "$JAVA_VERSION" -ge 19 ]; then
+        # Enable virtual threads in Java 19+
+        PREPEND_JAVA_OPTS="$PREPEND_JAVA_OPTS --enable-preview"
+    fi
+    if [ "$JAVA_VERSION" -ge 17 ]; then
+        # Enable export for LDAP (needed for JDK 17+)
+        PREPEND_JAVA_OPTS="$PREPEND_JAVA_OPTS --add-exports java.naming/com.sun.jndi.ldap=ALL-UNNAMED"
+    fi
 
     if [ "$GC_LOG" = "true" ]; then
         # Enable rotating GC logs if the JVM supports it and GC logs are not already enabled
